Laboratory/Istio/exam-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exam-scheduler
  template:
    metadata:
      labels:
        app: exam-scheduler
    spec:
      serviceAccountName: exam-scheduler-sa
      containers:
        - name: exam-scheduler
          image: hashicorp/http-echo
          args: ["-listen=:8080", "-text=📅 Exam scheduler"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: exam-scheduler
spec:
  selector:
    app: exam-scheduler
  ports:
    - port: 80
      targetPort: 8080
